<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#6A498E"
    android:minWidth="600dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titleName"
        android:textSize="40sp"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button1_title"
        android:id="@+id/button1"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button2_title"
        android:id="@+id/button2"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button3_title"
        android:id="@+id/button3"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button4_title"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button5_title"
        android:id="@+id/button5"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button6_title"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_alignStart="@+id/button4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button7_title"
        android:id="@+id/button"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
